--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
     <title>Parks and Rec</title>
   </head>
   <body>
-    <div id="app-root"></div>
+    <div id="root">
+
+    </div>
   </body>
 </html>
