--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,8 +10,6 @@
     <title>Parks and Rec</title>
   </head>
   <body>
-    <div id="root">
-
-    </div>
+    <div id="root"></div>
   </body>
-</html> -->
+</html>
